k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jandj-infra
  labels:
    app.kubernetes.io/part-of: jandj-infra
